# HolorLib

./: .gitignore  404.html  CMakeLists.txt  INSTALL  LICENSE  README.md  TODO  TODO.todo  holor.sh  index.html  mkdocs.yml  sitemap.xml
about/: holor_containers.html  index.html  origin_of_holor.html
api/: Concepts.html  Exceptions.html  Holor.html  HolorRef.html  Indexes.html  Layout.html  index.html
benchmark/: CMakeLists.txt
benchmark/src/: bm_slice.cpp
benchmarks/: CMakeLists.txt
benchmarks/src/: bm_bases.cpp  bm_dynamic_knot_sequence.cpp  bm_holor.cpp  bm_holor_ref.cpp  bm_layout.cpp  bm_point.cpp  bm_polynomial.cpp  bm_slice.cpp  bm_static_knot_sequence.cpp
cmake/: HolorConfig.cmake.in  HolorUninstall.cmake
custom_home_theme/: home.html  main.html
docs/: index.md
docs/about/: holor_containers.md  index.md  origin_of_holor.md
docs/api/: Concepts.md  Exceptions.md  Holor.md  HolorRef.md  Indexes.md  Layout.md  index.md
docs/custom_home_theme/: home.html
docs/custom_theme/: home-styles.html  home.html  main.html
docs/custom_theme1/: home.html
docs/custom_theme2/: main-styles.html
docs/doxygen/images/: tensorslice_2.eps
docs/getting_started/: getting_started.md  holor_containers.md  index.md  install.md  optional.md  origin_of_holor.md
docs/sphinx/: Makefile  conf.py  index.rst
docs/sphinx/src/: class_list.rst  quickstart.rst
docs/sphinx/src/concepts/: layout.rst
docs/sphinx/src/cpp_docs/utils/: exceptions.rst
docs/tutorials/: holor.md  holorref.md  index.md  indexing_slicing.md  iterators.md  layout.md
docs_extra/overrides/: base.html  landing.html
doxygen/: Doxyfile
examples/: CMakeLists.txt
examples/src/: example_access.cpp  example_concepts.cpp  example_constructors.cpp  example_interface.cpp  example_iterators.cpp  example_operations.cpp  holor_example.cpp  iterator_example.cpp  layout_example.cpp
getting_started/: index.html  install.html  optional.html
include/common/: common_predicates.h  dynamic_assert.h  exceptions.h  predicates.h  runtime_assertions.h  static_assert.h  static_assertions.h  utils.h
include/holor/: holor.h  holor_all.h  holor_comparisons.h  holor_concepts.h  holor_extra.h  holor_full.h  holor_operations.h  holor_printer.h  holor_ref.h  holor_ref_disjoined.h  holor_ref_iterator.h  holor_ref_old.h  holor_types.h  indexes.h  initializer.h  layout.h  layout_types.h  predicates.h  slice.h
include/indexes/: indexes.h
include/layout/: layout.h  layout_circular.h  layout_concepts.h
include/operations/: holor_operations.h
include/tensor/: tensor.h  tensor_initializer.h  tensor_predicates.h  tensor_ref.h  tensor_slice.h  tensor_utils.h
include/utils/: dynamic_assert.h  exceptions.h  static_assert.h
material/overrides/: main.html
old_docs/doxygen/: Doxyfile
old_docs/sphinx/: conf.py
old_docs/sphinx/src/cpp_docs/: cpp_index.rst
old_docs/sphinx/src/cpp_docs/utils/: tensor.rst
scripts/: holor.bashrc  holor_build_benchmarks.sh  holor_build_docs.sh  holor_build_examples.sh  holor_build_tests.sh  holor_clean.sh  holor_install.sh
search/: search_index.json
sphinx/: Makefile  conf.py  conf3.py  index.rst
sphinx/sections/: changelog.rst  cpp_docs_index.rst  cpp_examples.rst  credits.rst  holor.rst  install.rst  optional.rst  usage.rst
sphinx/sections/cpp_docs/: holor_class.rst  holorref_class.rst  layout_class.rst
sphinx/src/: credits.rst
src/examples/: tensor_example.cpp
stylesheets/: extra.css
tests/: CMakeLists.txt  installation_tests.sh
tests/include/: holor_test_helper.h  ks_setup.h  poly_setup.h  test_bases_impl.h  test_point_impl.h
tests/installation_tests/: CMakeLists.txt
tests/installation_tests/src/: main.cpp
tests/package_usage/: CMakeLists.txt  README.md
tests/src/: test_bases.cpp  test_comparisons.cpp  test_dynamic_knot_sequence.cpp  test_holor.cpp  test_holor_ref.cpp  test_iterators.cpp  test_layout.cpp  test_point.cpp  test_point1D.cpp  test_static_knot_sequence.cpp
tutorials/: holor.html  holorref.html  index.html  indexing_slicing.html  iterators.html  layout.html
